fixed overflow bug

--- a/dom-clock/style.css
+++ b/dom-clock/style.css
@@ -3,6 +3,7 @@ body {
   justify-content: center;
   display: flex;
   align-items: center;
+  overflow: hidden;
 }
 
 .clock-container {
